styles/style.css
html, body {
    padding: 0px;
    margin: 0px 20px;
}

.grid {
    width: 700px;
    height: auto;
    display: grid;
    grid-template-columns: 1fr;
    /* grid-template-columns: 1fr 1fr; */
    grid-template-rows: 50px 30px 50px 515px 250px 300px 10px 30px 30px 20px;
    justify-content: center;
}

header {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: auto;
}

/* .header-logo {
I think I need something for the columns within the header row here
} */

.head-logo-text {
    font-family: cursive;
    margin-left: 5px;
}
.head-logo-sub-text {
    font-size: 10px;
    color: lightgrey;
    margin-left: 5px;
}

.head-social {
    display: flex;
    flex-direction: row;
    justify-content: end;
    align-items: center;
}

/* the hr image disappeared */
.hr {
    grid-template-columns: auto;
    height: auto;
    align-self: center;
}

.chocolate-print {
    /* grid-template-columns: auto auto; */
    display: flex;
    flex-direction: row;
    align-content: center;
    margin-bottom: 15px;
}

.chocolate-pizza-text {
    font-size: 25px;
}

.post-date, .print {
    font-size: 10px;
    color: lightgrey;
}

.chocolate-pizza-img {
    grid-template-columns: auto;
    height: auto;
    width: 700px;
}

.instructions {
    grid-template-columns: auto;
    height: auto;
    margin: 20px;
    color: lightgrey;
}

p {
    text-indent: 30px;
    margin: 15px 20px;
}

.receipe {
    grid-template-columns: auto auto;
    height: 300px;
    background-image: url("/assets/list-bg.png");
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    margin: 20px;
}

/* I can't figure out how to get the list to wrap */
.receipe-left {
    /* display: flex;
    flex-direction: row;
    align-items: left; */
    margin: 60px;
    /* width: 100px; */
}

.receipe-right {
    /* display: flex;
    flex-wrap: column;
    align-items: left; */
    margin-right: 30px;
    /* width: 100px; */
}

input {
    display: flex;
    flex-wrap: column;
    align-items: left;
}
.bio-button {
    /* grid-template-columns: auto auto; */
    display: flex;
    flex-direction: row;
    align-items: center;
    height: auto;
}

.van-name {
    font-size: 15px;
    color: lightgrey;
    margin-left: 5px;
}

.van-bio {
    font-size: 12px;
    color: lightgrey;
    margin-left: 5px;
    width: 375px;
}

button {
    background-color: rgb(189, 65, 65);
    color: white;
    font-size: 10px;
    height: 30px;
    width: 100px;
}

/* when it's centered the hr lines disappear */
.silverware-hr {
    display: flex;
    flex-direction: row;
    align-items: center;
    
}

/* I can't figure out why this text is floating on top of the image. */
.footer {
    display: flex;
    flex-direction: row;
    align-items: center;
}

